[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "processes"
dynamic = ["version"]
description = "Orchestrate graphs of callables in Python with automatic dependency resolution, parallel execution, retries, timeouts, and HTML email alerts on failure — zero dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Oliver Mohr Bonometti", email = "oliver.mohr.b@gmail.com" }
]
keywords = ["tasks", "workflow", "dependencies", "parallel", "dag", "process", "etl", "topological-sort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = []

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "commitizen>=4.11.6",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.hatch.version]
source = "vcs"  # <--- Tells Hatch to look at Git/VCS tags

[tool.hatch.build.targets.wheel]
packages = ["src/processes"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_map_description = true
update_changelog_on_bump = true

[tool.mypy]
packages = ["processes"]
mypy_path = "src"
strict = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"] 
ignore = []

[project.urls]
Homepage = "https://github.com/oliverm91/processes"
Documentation = "https://oliverm91.github.io/processes/"
Repository = "https://github.com/oliverm91/processes"
Issues = "https://github.com/oliverm91/processes/issues"
Changelog = "https://github.com/oliverm91/processes/blob/main/CHANGELOG.md"