[metadata]
name = processes
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = attr: processes.__version__
description = Personal library for processes automations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/processes
license_files = LICENSE
keywords = processes, tasks, email, logs
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    Natural Language :: English

[options]
package_dir=
    = src
exclude =
    tests
packages=find:
python_requires = >=3.11
    

[options.packages.find]
where=src